--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -477,22 +477,22 @@
 <strong id="plus" style="padding-top:50px"> Latest  Volumes Data </strong>
 <p></p>			  
 <span>
-**|Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
+**|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
 <br>*1|**39461(4)|**54004|**63953|*104136|*126037┃*,354,753(109)┃2019/07/04|SPY×FAMILY&nbsp;1
-<br>**|**48098(3)|**91617|*110893|*******|*125137┃*,125,137(*31)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
-<br>**|**52663(5)|**74635|**87060|**95048|-------┃*,*95,048(*26)┃2019/09/04|Jigokuraku&nbsp;7
-<br>**|**33601(4)|**53438|**62143|-------|-------┃*,*62,143(*18)┃2019/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;13
-<br>**|**25993(3)|**48174|-------|-------|-------┃*,*48,174(**3)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;3
-<br>**|**33650(5)|**45832|-------|-------|-------┃*,*45,832(*12)┃2019/09/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;6
-<br>**|**21257(7)|-------|-------|-------|-------┃*,*21,257(**7)┃2019/08/19|The&nbsp;Reincarnation&nbsp;Magician&nbsp;of&nbsp;the&nbsp;Inferior&nbsp;Eyes&nbsp;2
-<br>**|**18338(5)|-------|-------|-------|-------┃*,*18,338(**5)┃2019/09/04|Saotome&nbsp;Shimai&nbsp;wa&nbsp;Manga&nbsp;no&nbsp;Tame&nbsp;nara!?&nbsp;5
-<br>**|**17280(4)|-------|-------|-------|-------┃*,*17,280(**4)┃2019/04/04|Blue&nbsp;Flag&nbsp;6
-<br>**|**15278(4)|-------|-------|-------|-------┃*,*15,278(**4)┃2019/07/04|Black&nbsp;Clover&nbsp;Gaiden:&nbsp;Quartet&nbsp;Knights&nbsp;&nbsp;2
-<br>**|**17118(7)|-------|-------|-------|-------┃*,*17,118(**7)┃2019/02/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;7
-<br>**|**10026(3)|-------|-------|-------|-------┃*,*10,026(**3)┃2019/08/02|Aharen-san&nbsp;wa&nbsp;Hakarenai&nbsp;7
-<br>**|***9651(4)|-------|-------|-------|-------┃*,**9,651(**4)┃2019/07/04|Mato&nbsp;Seihei&nbsp;no&nbsp;Slave&nbsp;2
-<br>**|**10049(5)|-------|-------|-------|-------┃*,*10,049(**5)┃2019/09/04|Mone-san&nbsp;no&nbsp;Majime&nbsp;Sugiru&nbsp;Tsukiaikata&nbsp;7
-<br>**|***7206(5)|-------|-------|-------|-------┃*,**7,206(**5)┃2019/09/04|Tis&nbsp;Time&nbsp;for&nbsp;"Torture,"&nbsp;Princess&nbsp;1
+<br>*2|**48098(3)|**91617|*110893|*******|*125137┃*,125,137(*31)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;9
+<br>*3|**52663(5)|**74635|**87060|**95048|-------┃*,*95,048(*26)┃2019/09/04|Jigokuraku&nbsp;7
+<br>*4|**33601(4)|**53438|**62143|-------|-------┃*,*62,143(*18)┃2019/07/04|Hana&nbsp;Nochi&nbsp;Hare～Boys&nbsp;Over&nbsp;Flowers&nbsp;Next&nbsp;Season～&nbsp;13
+<br>*5|**25993(3)|**48174|-------|-------|-------┃*,*48,174(**3)┃2019/08/02|World's&nbsp;End&nbsp;Harem&nbsp;Fantasia&nbsp;3
+<br>*6|**33650(5)|**45832|-------|-------|-------┃*,*45,832(*12)┃2019/09/04|Darling&nbsp;in&nbsp;the&nbsp;Franxx&nbsp;6
+<br>*7|**21257(7)|-------|-------|-------|-------┃*,*21,257(**7)┃2019/08/19|The&nbsp;Reincarnation&nbsp;Magician&nbsp;of&nbsp;the&nbsp;Inferior&nbsp;Eyes&nbsp;2
+<br>*8|**18338(5)|-------|-------|-------|-------┃*,*18,338(**5)┃2019/09/04|Saotome&nbsp;Shimai&nbsp;wa&nbsp;Manga&nbsp;no&nbsp;Tame&nbsp;nara!?&nbsp;5
+<br>*9|**17280(4)|-------|-------|-------|-------┃*,*17,280(**4)┃2019/04/04|Blue&nbsp;Flag&nbsp;6
+<br>10|**15278(4)|-------|-------|-------|-------┃*,*15,278(**4)┃2019/07/04|Black&nbsp;Clover&nbsp;Gaiden:&nbsp;Quartet&nbsp;Knights&nbsp;&nbsp;2
+<br>11|**17118(7)|-------|-------|-------|-------┃*,*17,118(**7)┃2019/02/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;7
+<br>12|**10026(3)|-------|-------|-------|-------┃*,*10,026(**3)┃2019/08/02|Aharen-san&nbsp;wa&nbsp;Hakarenai&nbsp;7
+<br>13|***9651(4)|-------|-------|-------|-------┃*,**9,651(**4)┃2019/07/04|Mato&nbsp;Seihei&nbsp;no&nbsp;Slave&nbsp;2
+<br>14|**10049(5)|-------|-------|-------|-------┃*,*10,049(**5)┃2019/09/04|Mone-san&nbsp;no&nbsp;Majime&nbsp;Sugiru&nbsp;Tsukiaikata&nbsp;7
+<br>15|***7206(5)|-------|-------|-------|-------┃*,**7,206(**5)┃2019/09/04|Tis&nbsp;Time&nbsp;for&nbsp;"Torture,"&nbsp;Princess&nbsp;1
 </span>
 <p>
 	-
@@ -501,10 +501,10 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>**|*109702(3)|*193425|*240226|-------|-------┃*,240,226(*17)┃2019/10/04|SPY×FAMILY&nbsp;2
-<br>**|**10842(3)|**19252|-------|-------|-------┃*,*19,252(*10)┃2019/10/04|Black&nbsp;Clover&nbsp;Gaiden:&nbsp;Quartet&nbsp;Knights&nbsp;&nbsp;3
-<br>**|***9961(3)|**18341|-------|-------|-------┃*,*18,341(*10)┃2019/10/04|2.5&nbsp;Dimensional&nbsp;Seduction&nbsp;&nbsp;1
-<br>**|***9276(3)|-------|-------|-------|-------┃*,**9,276(**3)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;8
+<br>*1|*109702(3)|*193425|*240226|-------|-------┃*,240,226(*17)┃2019/10/04|SPY×FAMILY&nbsp;2
+<br>*2|**10842(3)|**19252|-------|-------|-------┃*,*19,252(*10)┃2019/10/04|Black&nbsp;Clover&nbsp;Gaiden:&nbsp;Quartet&nbsp;Knights&nbsp;&nbsp;3
+<br>*3|***9961(3)|**18341|-------|-------|-------┃*,*18,341(*10)┃2019/10/04|2.5&nbsp;Dimensional&nbsp;Seduction&nbsp;&nbsp;1
+<br>*4|***9276(3)|-------|-------|-------|-------┃*,**9,276(**3)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Soma:&nbsp;L'étoile&nbsp;8
 <br>
 
 </span>
